--- a/.github/workflows/publish-caption.yml
+++ b/.github/workflows/publish-caption.yml
@@ -6,8 +6,8 @@ on:
   push:
     branches: [ "main" ]
     tags: [ 'v*.*.*' ]
-#   pull_request:
-#     branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 env:
   REGISTRY: ghcr.io
