--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -1,32 +1,8 @@
-# Build stage
-FROM nvidia/cuda:12.4.0-devel-ubuntu22.04 AS base
+FROM vllm/vllm-openai:v0.6.4.post1
 
-# Set environment variables
-ENV PYTHONUNBUFFERED=1 \
-    DEBIAN_FRONTEND=noninteractive \
-    PIP_NO_CACHE_DIR=off \
-    PIP_DISABLE_PIP_VERSION_CHECK=on \
-    PIP_DEFAULT_TIMEOUT=100 \
-    CUDA_HOME=/usr/local/cuda \
-    PATH=${PATH}:/usr/local/cuda/bin
 
-# Install system dependencies and Python
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    python3-pip \
-    python3.11 \
-    python3.11-dev \
-    python3.11-venv \
-    && rm -rf /var/lib/apt/lists/* \
-    && update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 \
-    && update-alternatives --set python3 /usr/bin/python3.11 \
-    && ln -sf /usr/bin/python3 /usr/bin/python \
-    && python3 -m pip install --upgrade pip \
-    && pip3 install torch torchvision
-
-WORKDIR /app
-
+ENV VLLM_VERSION=v0.6.4.post1
+ENV DO_NOT_TRACK=1
 # Install dependencies
 COPY ./requirements.txt /app/requirements.txt
 
@@ -41,6 +17,7 @@ ENV PYTHONPATH=/app:/app/modules:$PYTHONPATH
 # Expose the port the app runs on
 EXPOSE 32100
 
-# Set the entrypoint
-ENTRYPOINT ["uvicorn"]
-CMD ["odr_caption.server.app:app", "--host", "0.0.0.0", "--port", "32100", "--reload"]
+COPY --chmod=775 endpoints-entrypoint.sh entrypoint.sh
+
+ENTRYPOINT ["/bin/bash", "entrypoint.sh"]
+CMD ["tail", "-f", "/dev/null"]
