--- a/.github/workflows/publish-caption.yml
+++ b/.github/workflows/publish-caption.yml
@@ -54,7 +54,8 @@ jobs:
         with:
           context: ./modules/odr_caption
           file: ./modules/odr_caption/docker/Dockerfile.caption
-          push: ${{ github.event_name != 'pull_request' }}
+          # push: ${{ github.event_name != 'pull_request' }}
+          push: true
           tags: ${{ steps.meta-caption.outputs.tags }}
           labels: ${{ steps.meta-caption.outputs.labels }}
           cache-from: type=gha
