--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,11 +70,13 @@ services:
       - ./modules/odr_frontend/docker/entrypoint.sh:/app/docker/entrypoint.sh
       - odr_frontend_node_modules:/app/node_modules
       - odr_frontend_pnpm_store:/app/.pnpm-store
+      - ${UPLOAD_DIR:-./uploads}:/app/uploads
     ports:
       - "5173:5173"
     environment:
-      NODE_ENV: development
+      NODE_ENV: ${NODE_ENV:-development}
       API_SERVICE_URL: http://odr-api:31100/api/v1
+      UPLOAD_DIR: /app/uploads
     env_file:
       - ./modules/odr_frontend/.env
     networks:
