--- a/modules/odr_frontend/package.json
+++ b/modules/odr_frontend/package.json
@@ -51,9 +51,12 @@
 		"@auth/core": "^0.35.0",
 		"@auth/pg-adapter": "^1.5.0",
 		"@auth/sveltekit": "^1.5.0",
+		"@aws-sdk/client-s3": "^3.701.0",
 		"@floating-ui/dom": "1.6.10",
+		"axios": "^1.7.8",
 		"highlight.js": "11.10.0",
 		"next-auth": "^4.24.7",
-		"pg": "^8.13.0"
+		"pg": "^8.13.0",
+		"pnpm": "^9.14.4"
 	}
 }
