Add the new docker compose variables to the .env.template file.
Signed-off-by: Zachary Licastro <CheesyLaZanya@proton.me>

--- a/.env.template
+++ b/.env.template
@@ -41,3 +41,7 @@ OAUTH2_REDIRECT_PATH=docs
 ## Hugging Face
 HF_TOKEN=your_access_token
 HF_HDR_DATASET_NAME=openmodelinitiative/hdr-submissions
+
+## Docker compose variables
+NODE_ENV=development
+UPLOAD_DIR=./uploads
