--- a/modules/odr_caption/docker/Dockerfile.caption
+++ b/modules/odr_caption/docker/Dockerfile.caption
@@ -10,16 +10,17 @@ RUN useradd -m -s /bin/bash appuser \
 ENV VLLM_VERSION=v0.6.4.post1
 ENV DO_NOT_TRACK=1
 ENV HF_HOME=/cache/HF_HOME
-# Install dependencies
-COPY --chown=appuser:appuser ./requirements.txt /app/requirements.txt
 
-# Copy application code
-COPY --chown=appuser:appuser . /app
+# Install dependencies with read-only permissions
+COPY --chmod=755 --chown=appuser:appuser ./requirements.txt /app/requirements.txt
+
+# Copy application code with read-only permissions
+COPY --chmod=755 --chown=appuser:appuser  . /app
 RUN pip3 install --no-cache-dir -e /app \
     && pip3 install git+https://github.com/dottxt-ai/outlines --upgrade
 
-# Copy and set permissions for entrypoint script
-COPY --chmod=775 --chown=appuser:appuser endpoints-entrypoint.sh entrypoint.sh
+# Copy and set permissions for entrypoint script (executable but not writable)
+COPY --chmod=755 --chown=appuser:appuser endpoints-entrypoint.sh entrypoint.sh
 
 # Expose the port the app runs on
 EXPOSE 32100
