--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -4,7 +4,7 @@ version: '3'
 
 includes:
   api: ./modules/odr_api/Taskfile.api.yml
-  db: ./modules/odr_database/Taskfile.yml
+  # db: ./modules/odr_database/Taskfile.yml
   core: ./modules/odr_core/Taskfile.yml
   data: ./modules/odr_datamodel/Taskfile.yml
   frontend: ./modules/odr_frontend/Taskfile.yml
@@ -74,7 +74,7 @@ tasks:
       - |
         task core:test &
         task core:test-db &
-        task db:test-postgres &
+        # task db:test-postgres &
         task api-test:test-all &
         task monitoring:test &
         wait
